--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> o que o macaco faz?</title>
- </head>
- <body>
-    <h1>o macaco come banana!</h1>
- </body>
- </html>
+    <title>Teste</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>  <center>ulookooo
+    </center></h1>
+    <p>ulokooo2</p>
+    
+</body>
+</html>
