--- a/index.html
+++ b/index.html
@@ -1,30 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <meta name="viewport" content="width=,, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="STYLE.CSS">
 </head>
 <body>
-     <h1><center>SEJA BEM VINDO</CENTER></h1>
-     <P CLASS="P1=>BOLO DOS SONHOS</P>
-     <P CLASS="P2"></P>
-     <img src="" alt="">
+    <center>
+    <h2 class="cinemax">
+        cinemax
+    </h2>
+    <table border="4">
+<tr class="l1">
+       <td>
+       <h1>em cartaz</h1>
+       </td>
+       <td>
+        <h1>horarios</h1>
+       </td>
+       <td>
+      <h1>classificação</h1>
+       </td>
+       <td> <h1>Banner</h1></td>
+    </tr>
+<tr class="l2">
+    <td>
+        <h1>Barbie</h1>
+    </td>
+    <td>
+        <h1>15h / 16:30 / 19:40 </h1>
+    </td>
+    <td>
+        <h1>12 anos</h1>
+    </td>
+    <td>
+        <img src="Barbie_(2023).jpg" alt="">
+    </td>
+</tr>
+<tr class="l3">
+<td>
+<h1>Indiana Jones</h1>
+</td>
+    <td>
+        <h1>16:50 / 18h / 19:30 </h1>
+    </td>
+    <td>
+        <h1>14 anos</h1>
+    </td>   
+    <td>
+        <img src="1153346.jpg" alt="">
+    </td>
+</tr>
+<tr class="l4">
+    <td>
+        <h1>The Flash</h1>
+    </td>
+    <td>
+        <h1>14h / 16:30 / 18h </h1>
+    </td>
+    <td>
+        <h1>14 anos</h1>
+    </td>
+    <td>
+        <img src="/home/escola/Downloads/poster-the-flash-legadodadc.webp" alt="">
+    </td>
+</tr>
+<tr class="l5">
+<td>
+    <h1>Oppenheimer</h1>
+</td>
+<td>
+    <h1>15:30/ 18h / 20h </h1>
+</td>
+<td>
+    <h1>16 anos</h1>
+</td>
+<td>
+    <img src="download (8).jpeg" alt="">
+</td>
+</tr>
+    </table>
+</center>
 </body>
 </html>
-<OL>RECEITA</OL>
-<LI>3 OVOS</LI>
-<LI>2 COLHERES DE MANTEIGA</LI>
-<LI>1 COLHER DE FERMENTO</LI>
-<LI>1 CAIXINHA DE LEITE CONDESADO</LI>
-<LI>ACHOCOLATADO EM PÓ</LI>
-<LI>3 XÍCARA DE CHÁ DE LEITE</LI>
-<LI>3 XÍCARAS DE FARINHA DE TRIGO</LI>
-<LI>FORMA DA SUA PREFERÊNCIA</LI>
-<LI>AQUEÇA O FORNO Á 180GRAUS</LI>
-<LI>COLOCAR O BOLO A 120 GRAUS,OBS:PARA NÃO QUEIMAR</LI>
-<LI>MORANGOS PARA DECORAR</LI>
-<LI>GRANULADO</LI>
-<LI>CHANTILLY</LI>
-<LI>GELEIA</LI>
