--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 </head>
 <body>
     <center>
-    <h2 class="cinemax">
-        cinemax
+    <h2 class="EMPADÃO.DO.RABICÓ">
+        EMPADÃO DO RABICÓ
     </h2>
     <table border="4">
 <tr class="l1">
+    <h1>  venha se deliciar no empadão do rabicó,   </h1>
+    <h1>conheça e desfrute do empadão de maior qualidade</h1>
+    <h1>e mais saboroso da região</h1>
+
+<h3> confira os sabores e escolha aquele que seu coração mandar ;)</h3>
        <td>
-       <h1>em cartaz</h1>
+       <h1> <img class="frango"   src="torta-de-frango-com-catupiry-cremosa.jpg" alt="> </h1>
        </td>
        <td>
         <h1>horarios</h1>
